добавила дата-атрибут

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
 
-    <header class="page-header">
+    <header class="page-header" data-test="header">
       <nav class="navigation">
         <a class="logo" href="index.html">
           <img src="#" width="140" height="70" alt="Логотип Седона" aria-current="page">
@@ -41,15 +41,15 @@
         <a class="button navigation-button  button-modal " href="#">Хочу сюда</a>
       </nav>
     </header>
-    <main class="main main-index">
+    <main class="main main-index" data-test="main">
       <h1 class="visually-hidden">Седона</h1>
-      <section class="hero">
+      <section class="hero" data-test="hero">
         <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
         <div class="hero-image">
           <img src="#" width="458" height="352" alt="Добро пожаловать в Седону">
         </div>
       </section>
-      <section class="advantages">
+      <section class="advantages" data-test="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <div class="description">
           <h2 class="description-title page-title">Седона-небольшой городок в Аризоне,
@@ -138,7 +138,7 @@
           </li>
         </ul>
       </section>
-      <section class="search">
+      <section class="search" data-test="search">
         <h2 class="search-title page-title">Заинтересовались?</h2>
         <p class="search-text page-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
           предложения гостиниц в Седоне</p>
@@ -147,7 +147,7 @@
 
       </section>
 
-      <section class="subscribe subscribe-home">
+      <section class="subscribe subscribe-home" data-test="subscribe">
         <h2 class="subscribe-title page-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-text page-text">Только полезная информация и никакого спама, честное бойскаутское!
         </p>
@@ -161,7 +161,7 @@
 
 
     </main>
-    <footer class="footer-page">
+    <footer class="footer-page" data-test="footer">
       <ul class="social-list list-reset">
         <li class="social-item">
           <a class="social-link" href="https://vk.com/htmlacademy">
