--- a/catalog.html
+++ b/catalog.html
@@ -8,20 +8,20 @@
 
 <body>
 
-    <header class="page-header" data-test="header">
+    <header class="page-header" >
         <nav class="navigation">
             <a class="logo" href="index.html">
-                <img src="#" width="140" height="70" alt="Логотип Седона" aria-current="page">
+                <img src="images/logo-sedona.svg" width="140" height="70" alt="Логотип Седона" aria-current="page">
             </a>
             <ul class="navigation-list list-reset">
                 <li class="navigation-item">
-                    <a class="navigation-link navigation-current" aria-current="page" href="index.html">Главная</a>
+                    <a class="navigation-link " href="index.html">Главная</a>
                 </li>
                 <li class="navigation-item">
-                    <a class="navigation-link" href="about.html">о Седоне</a>
+                    <a class="navigation-link" href="#">о Седоне</a>
                 </li>
                 <li class="navigation-item">
-                    <a class="navigation-link" href="hotels.html">Гостиницы</a>
+                    <a class="navigation-link navigation-current" aria-current="page" href="catalog.html">Гостиницы</a>
                 </li>
             </ul>
             <ul class="user-lest list-reset ">
@@ -41,7 +41,7 @@
             <a class="button navigation-button  button-modal " href="#">Хочу сюда</a>
         </nav>
     </header>
-    <main class="main" data-test="main">
+    <main class="main" >
         <h1 class="visually-hidden">Каталог гостиниц Седоны</h1>
         <section class="catalog">
             <div class="catalog-filter filter" data-test="catalog">
@@ -57,7 +57,7 @@
                             aria-current="page">Гостиницы</a>
                     </li>
                 </ul>
-                <form class="filter-form" action="https://echo.htmlacademy.ru/" method="get" data-test=" filter">
+                <form class="filter-form" action="https://echo.htmlacademy.ru/" method="get" >
                     <fieldset class="filter-group filter-group-check">
                         <legend class="filter-title">Инфраструктура:</legend>
                         <ul class="filter-list control-list list-reset">
@@ -101,8 +101,8 @@
                     <fieldset class="filter-group filter-group-range">
                         <legend class="filter-title">Стоимость, ₽:</legend>
                         <span class="visually-hidden">Тут будет фильтр полосы</span>
-                        <label for="price">Стоимость</label>
-                        <input type="range" id="price" name="price" min="0" max="9000" step="1">
+
+
                     </fieldset>
 
                     <fieldset class="filter-group filter-group-buttons">
@@ -144,9 +144,9 @@
 
                 <ul class="hotels-list list-reset">
                     <li class="hotels-item">
-                        <a class="hotels-img" href="#">
-                            <img src="#" width="300" height="212" alt="Отель Amara Resort & Spa">
-                        </a>
+                        <figure class="hotels-img">
+                            <img src="images/hotel-1.jpg" width="300" height="212" alt="Отель Amara Resort & Spa">
+                        </figure>
 
                         <a class="hotels-link" href="#">
                             <h3 class="hotels-title">Amara Resort &amp; Spa</h3>
@@ -156,8 +156,7 @@
                         <p class="hotels-text hotels-text-price">От 4000 ₽</p>
 
                         <a class="button hotels-button hotels-more" href="#">Подробнее</a>
-                        <button class="button button-light hotels-button hotels-favorites" type="button">В
-                            избранное</button>
+                        <button class="button button-light hotels-button hotels-favorites" type="button">В избранное</button>
 
                         <p class="hotels-rating-star hotels-rating-star-4">
                             <span class="visually-hidden">4 звезды из 5.</span>
@@ -166,9 +165,9 @@
                     </li>
 
                     <li class="hotels-item">
-                        <a class="hotels-img" href="#">
+                        <figure class="hotels-img" href="images/hotel-2.jpg">
                             <img src="#" width="300" height="212" alt="Отель Villas at Poco Diablo">
-                        </a>
+                        </figure>
 
                         <a class="hotels-link" href="#">
                             <h3 class="hotels-title">Отель Villas at Poco Diablo</h3>
@@ -178,8 +177,7 @@
                         <p class="hotels-text hotels-text-price">От 5000 ₽</p>
 
                         <a class="button hotels-button hotels-more" href="#">Подробнее</a>
-                        <button class="button button-light hotels-button hotels-favorites" type="button">В
-                            избранное</button>
+                        <button class="button button-light hotels-button hotels-favorites" type="button">В избранное</button>
 
                         <p class="hotels-rating-star hotels-rating-star-4">
                             <span class="visually-hidden">4 звезды из 5.</span>
@@ -188,9 +186,9 @@
                     </li>
 
                     <li class="hotels-item">
-                        <a class="hotels-img" href="#">
+                        <figure class="hotels-img" href="images/hotel-3.jpg">
                             <img src="#" width="300" height="212" alt="Отель Desert Quail Inn">
-                        </a>
+                        </figure>
 
                         <a class="hotels-link" href="#">
                             <h3 class="hotels-title">Отель Desert Quail Inn</h3>
@@ -200,8 +198,7 @@
                         <p class="hotels-text hotels-text-price">От 2500 ₽</p>
 
                         <a class="button hotels-button hotels-more" href="#">Подробнее</a>
-                        <button class="button button-light hotels-button hotels-favorites" type="button">В
-                            избранное</button>
+                        <button class="button button-light hotels-button hotels-favorites" type="button">В избранное</button>
 
                         <p class="hotels-rating-star hotels-rating-star-4">
                             <span class="visually-hidden">3 звезды из 5.</span>
@@ -210,9 +207,9 @@
                     </li>
 
                     <li class="hotels-item">
-                        <a class="hotels-img" href="#">
-                            <img src="#" width="300" height="212" alt="Отель GreenTree Inn>
-                        </a>
+                        <figure class="hotels-img" href="#">
+                            <img src="#" width="300" height="212" alt="Отель GreenTree Inn">
+                        </figure>
 
                         <a class=" hotels-link" href="#">
                             <h3 class="hotels-title">Отель GreenTree Inn</h3>
@@ -222,8 +219,7 @@
                         <p class="hotels-text hotels-text-price">От 1500 ₽</p>
 
                         <a class="button hotels-button hotels-more" href="#">Подробнее</a>
-                        <button class="button button-light hotels-button hotels-favorites" type="button">В
-                            избранное</button>
+                        <button class="button button-light hotels-button hotels-favorites" type="button">В избранное</button>
 
                         <p class="hotels-rating-star hotels-rating-star-4">
                             <span class="visually-hidden">2 звезды из 5.</span>
@@ -266,7 +262,7 @@
 
 
 
-        <section class="subscribe subscribe-home" data-test="subscribe">
+        <section class="subscribe" data-test="subscribe">
             <h2 class="subscribe-title page-title">Подпишитесь на рассылку</h2>
             <p class="subscribe-text page-text">Только полезная информация и никакого спама,
                 честное
@@ -284,30 +280,29 @@
                 <li class="social-item">
                     <a class="social-link" href="https://vk.com/htmlacademy">
                         <span class="visually-hidden">ВКонтакте</span>
-                        <img src="#" width="48" height="41" alt="Логотип VK">
+                        <img src="images/social-vk.svg" width="48" height="41" alt="Логотип VK">
                     </a>
                 </li>
                 <li class="social-item">
                     <a class="social-link" href="https://telegram.com/htmlacademy">
                         <span class="visually-hidden">Телеграм</span>
-                        <img src="#" width="48" height="41" alt="Логотип VK">
+                        <img src="images/social-tg.svg" width="48" height="41" alt="Логотип telegram">
                     </a>
                 </li>
                 <li class="social-item">
                     <a class="social-link" href="https://youtube.com/htmlacademy">
                         <span class="visually-hidden">Youtube</span>
-                        <img src="#" width="48" height="41" alt="Логотип VK">
+                        <img src="images/social-youtube.svg" width="48" height="41" alt="Логотип Youtube">
                     </a>
                 </li>
             </ul>
-            <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-            </a>
+            <a> class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+            
             <a class="footer-dev" href="hhttps://htmlacademy.ru/">
                 <span class="visually-hidden">Сайт разработчика</span>
-                <img src="#" width="115" height="34" alt="Логотип HTMLAcademy">
+                <img src="images/logo-html-academy.svg" width="115" height="34" alt="Логотип HTMLAcademy">
             </a>
 
         </footer>
 </body>
-
 </html>
