--- a/index.html
+++ b/index.html
@@ -1,195 +1,195 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-  <head>
-    <meta charset="utf-8">
-    <title>HTML academy:Седона</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>HTML academy:Седона</title>
+</head>
 
-  <body>
+<body>
 
-    <header class="page-header" data-test="header">
-      <nav class="navigation">
-        <a class="logo" href="index.html">
-          <img src="#" width="140" height="70" alt="Логотип Седона" aria-current="page">
-        </a>
-        <ul class="navigation-list list-reset">
-          <li class="navigation-item">
-            <a class="navigation-link navigation-current" aria-current="page" href="index.html">Главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="about.html">о Седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="hotels.html">Гостиницы</a>
-          </li>
-        </ul>
-        <ul class="user-lest list-reset ">
-          <li class="user-item">
-            <a class="user-link user-link-search" href="#">
-              <span class="visually-hidden">Поиск</span>
-            </a>
-          </li>
-          <li class="user-item">
-            <a class="user-link user-link-favorites" href="#">
-              <span class="user-favorites-number">12 Избранное</span>
-              <span class="visually-hidden">Избранное</span>
-            </a>
-          </li>
-        </ul>
-
-        <a class="button navigation-button  button-modal " href="#">Хочу сюда</a>
-      </nav>
-    </header>
-    <main class="main main-index" data-test="main">
-      <h1 class="visually-hidden">Седона</h1>
-      <section class="hero" data-test="hero">
-        <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-        <div class="hero-image">
-          <img src="#" width="458" height="352" alt="Добро пожаловать в Седону">
-        </div>
-      </section>
-      <section class="advantages" data-test="advantages">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <div class="description">
-          <h2 class="description-title page-title">Седона-небольшой городок в Аризоне,
-            <br>заслуживающий большего
-          </h2>
-          <p class="description-text page-text">Рассмотрим причины,по которым Седона круче,чем
-            Гранд&#8211;Каньон</p>
-        </div>
-        <ul class="advantages-list list-reset">
-          <li class="advantages-item idvantages-item-full">
-            <div class="advantages-container">
-              <div class="advantages-content">
-                <h3 class="advantages-title">Настоящий городок</h3>
-                <p class="advantages-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
-              </div>
-              <div class="advantages-image">
-                <img src="#" width="800" height="384" alt="Фото здания в городе">
-
-              </div>
-            </div>
-          </li>
-
-          <li class="advantages-item">
-            <div class="advantages-content">
-              <h3 class="advantages-title">Небольшая площадь</h3>
-              <p class="advantages-text">Все достопримечательности находятся очень близко</p>
-            </div>
-          </li>
-          <li class="advantages-item">
-            <div class="advantages-content">
-              <h3 class="advantages-title">Красивая дорога</h3>
-              <p class="advantages-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </div>
-          </li>
-          <li class="advantages-item">
-            <div class="advantages-content">
-              <h3 class="advantages-title">Мало туристов</h3>
-              <p class="advantages-text">Большинство едут в Гранд Каньон и толпятся там</p>
-            </div>
-          </li>
-          <li class="advantages-item idvantages-item-full">
-            <div class="advantages-container">
-              <div class="advantages-content">
-                <h3 class="advantages-title">Мост Дьявола</h3>
-                <p class="advantages-text">Да,по нему можно пройти!Если вы осмелитесь,разумеется</p>
-              </div>
-              <div class="advantages-image">
-                <img src="#" width="800" height="384" alt="Фото моста Дьявола">
-
-              </div>
-            </div>
-          </li>
-
-        </ul>
-
-
-      </section>
-      <section class="services">
-        <h2 class="visually-hidden">Сервисы</h2>
-        <div class="servises-description">
-          <p class="servises-description-title page-title">Приезжайте в Седону отдохнуть в комфорте и уюте!
-          </p>
-          <p class="servises-description-text page-text">Опытный персонал и качественное обслуживание!</p>
-        </div>
-        <ul class="services-list list-reset">
-          <li class="services-item">
-            <div class="services-content services-content-home">
-              <h3 class="services-title">Жильё</h3>
-              <p class="services-text">Рекомендуем пожить в настоящем мотеле,все как в кино!</p>
-            </div>
-
-          </li>
-          <li class="services-item">
-            <div class="services-content services-content-food">
-              <h3 class="services-title">Еда</h3>
-              <p class="services-text">Всегда заказывайте фирменный бургер,вы не разачаруетесь!</p>
-            </div>
-
-          </li>
-          <li class="services-item">
-            <div class="services-content services-content-souvenirs">
-              <h3 class="services-title">Сувениры</h3>
-              <p class="services-text">Не только китайского,но и настоящего местного производства!</p>
-            </div>
-
-          </li>
-        </ul>
-      </section>
-      <section class="search" data-test="search">
-        <h2 class="search-title page-title">Заинтересовались?</h2>
-        <p class="search-text page-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
-          предложения гостиниц в Седоне</p>
-        <a class="search-button button button-modal" href="#">Поиск гостиницы в Седоне</a>
-
-
-      </section>
-
-      <section class="subscribe subscribe-home" data-test="subscribe">
-        <h2 class="subscribe-title page-title">Подпишитесь на рассылку</h2>
-        <p class="subscribe-text page-text">Только полезная информация и никакого спама, честное бойскаутское!
-        </p>
-        <form class="subscribe-form" action="https://echo.htmlacademy.ru" method="POST">
-          <label class="visually-hidden" for="subscribe-email">Ваш email</label>
-          <input class="subscribe-input form-input" id="subscribe-email" name="subscribe-email" type="email"
-            placeholder="Ваш e-mail" required>
-          <button class="button button-light subscribe-button" type="submit">Подписаться</button>
-        </form>
-      </section>
-
-
-    </main>
-    <footer class="footer-page" data-test="footer">
-      <ul class="social-list list-reset">
-        <li class="social-item">
-          <a class="social-link" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">ВКонтакте</span>
-            <img src="#" width="48" height="41" alt="Логотип VK">
+  <header class="page-header" data-test="header">
+    <nav class="navigation">
+      <a class="logo" href="index.html" aria-current="page">
+        <img src="images/logo-sedona.svg" width="140" height="70" alt="Логотип Седона" aria-current="page">
+      </a>
+      <ul class="navigation-list list-reset">
+        <li class="navigation-item">
+          <a class="navigation-link navigation-current" aria-current="page" href="index.html">Главная</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">о Седоне</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="catalog.html">Гостиницы</a>
+        </li>
+      </ul>
+      <ul class="user-list list-reset ">
+        <li class="user-item">
+          <a class="user-link user-link-search" href="#">
+            <span class="visually-hidden">Поиск</span>
           </a>
         </li>
-        <li class="social-item">
-          <a class="social-link" href="https://telegram.com/htmlacademy">
-            <span class="visually-hidden">Телеграм</span>
-            <img src="#" width="48" height="41" alt="Логотип VK">
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="social-link" href="https://youtube.com/htmlacademy">
-            <span class="visually-hidden">Youtube</span>
-            <img src="#" width="48" height="41" alt="Логотип VK">
+        <li class="user-item">
+          <a class="user-link user-link-favorites" href="#">
+            <span class="user-favorites-number">12 Избранное</span>
+            <span class="visually-hidden">Избранное</span>
           </a>
         </li>
       </ul>
-      <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      </a>
-      <a class="footer-dev" href="hhttps://htmlacademy.ru/">
-        <span class="visually-hidden">Сайт разработчика</span>
-        <img src="#" width="115" height="34" alt="Логотип HTMLAcademy">
-      </a>
 
-    </footer>
-  </body>
+      <a class="button navigation-button  button-modal" href="#">Хочу сюда</a>
+    </nav>
+  </header>
+  <main class="main main-index">
+    <h1 class="visually-hidden">Седона</h1>
+    <section class="hero" data-test="hero">
+      <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+      <div class="hero-image">
+        <img src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону">
+      </div>
+    </section>
+    <section class="advantages" data-test="advantages">
+      <h2 class="visually-hidden">Преимущества</h2>
+      <div class="advantages-description">
+        <h2 class="advantages-description-title page-title">Седона-небольшой городок в Аризоне,
+          <br>заслуживающий большего
+        </h2>
+        <p class="advantages-description-text page-text">Рассмотрим причины,по которым Седона круче,чем
+          Гранд&#8211;Каньон</p>
+      </div>
+      <ul class="advantages-list list-reset">
+        <li class="advantages-item idvantages-item-full">
+          <div class="advantages-container">
+            <div class="advantages-content">
+              <h3 class="advantages-title">Настоящий городок</h3>
+              <p class="advantages-text">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+            </div>
+            <div class="advantages-image">
+              <img src="images/advantages-1.jpg" width="800" height="384" alt="Фото здания в городе">
+
+            </div>
+          </div>
+        </li>
+
+        <li class="advantages-item">
+          <div class="advantages-content">
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <p class="advantages-text">Все достопримечательности находятся очень близко</p>
+          </div>
+        </li>
+        <li class="advantages-item">
+          <div class="advantages-content">
+            <h3 class="advantages-title">Красивая дорога</h3>
+            <p class="advantages-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </div>
+        </li>
+        <li class="advantages-item">
+          <div class="advantages-content">
+            <h3 class="advantages-title">Мало туристов</h3>
+            <p class="advantages-text">Большинство едут в Гранд Каньон и толпятся там</p>
+          </div>
+        </li>
+        <li class="advantages-item idvantages-item-full">
+          <div class="advantages-container">
+            <div class="advantages-content">
+              <h3 class="advantages-title">Мост Дьявола</h3>
+              <p class="advantages-text">Да,по нему можно пройти!Если вы осмелитесь,разумеется</p>
+            </div>
+            <div class="advantages-image">
+              <img src="images/advantages-2.jpg" width="800" height="384" alt="Фото моста Дьявола">
+
+            </div>
+          </div>
+        </li>
+
+      </ul>
+
+
+    </section>
+    <section class="services">
+      <h2 class="visually-hidden">Сервисы</h2>
+      <div class="servises-description">
+        <p class="servises-description-title page-title">Приезжайте в Седону отдохнуть в комфорте и уюте!
+        </p>
+        <p class="servises-description-text page-text">Опытный персонал и качественное обслуживание!</p>
+      </div>
+      <ul class="services-list list-reset">
+        <li class="services-item">
+          <div class="services-content services-content-home">
+            <h3 class="services-title">Жильё</h3>
+            <p class="services-text">Рекомендуем пожить в настоящем мотеле,все как в кино!</p>
+          </div>
+
+        </li>
+        <li class="services-item">
+          <div class="services-content services-content-food">
+            <h3 class="services-title">Еда</h3>
+            <p class="services-text">Всегда заказывайте фирменный бургер,вы не разачаруетесь!</p>
+          </div>
+
+        </li>
+        <li class="services-item">
+          <div class="services-content services-content-souvenirs">
+            <h3 class="services-title">Сувениры</h3>
+            <p class="services-text">Не только китайского,но и настоящего местного производства!</p>
+          </div>
+
+        </li>
+      </ul>
+    </section>
+    <section class="search" data-test="search">
+      <h2 class="search-title page-title">Заинтересовались?</h2>
+      <p class="search-text page-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+        предложения гостиниц в Седоне</p>
+      <a class="search-button button button-modal" href="#">Поиск гостиницы в Седоне</a>
+
+
+    </section>
+
+    <section class="subscribe subscribe-home" data-test="subscribe">
+      <h2 class="subscribe-title page-title">Подпишитесь на рассылку</h2>
+      <p class="subscribe-text page-text">Только полезная информация и никакого спама, честное бойскаутское!
+      </p>
+      <form class="subscribe-form" action="https://echo.htmlacademy.ru" method="POST">
+        <label class="visually-hidden" for="subscribe-email">Ваш email</label>
+        <input class="subscribe-input form-input" id="subscribe-email" name="subscribe-email" type="email"
+          placeholder="Ваш e-mail" required>
+        <button class="button button-light subscribe-button" type="submit">Подписаться</button>
+      </form>
+    </section>
+
+
+  </main>
+  <footer class="footer-page" data-test="footer">
+    <ul class="social-list list-reset">
+      <li class="social-item">
+        <a class="social-link" href="https://vk.com/htmlacademy">
+          <span class="visually-hidden">ВКонтакте</span>
+          <img src="images/social-vk.svg" width="48" height="41" alt="Логотип VK">
+        </a>
+      </li>
+      <li class="social-item">
+        <a class="social-link" href="https://telegram.com/htmlacademy">
+          <span class="visually-hidden">Телеграм</span>
+          <img src="images/social-tg.svg" width="48" height="41" alt="Логотип telegram">
+        </a>
+      </li>
+      <li class="social-item">
+        <a class="social-link" href="https://youtube.com/htmlacademy">
+          <span class="visually-hidden">Youtube</span>
+          <img src="images/social-youtube.svg" width="48" height="41" alt="Логотип Youtube">
+        </a>
+      </li>
+    </ul>
+    <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+    
+    <a class="footer-dev" href="hhttps://htmlacademy.ru/">
+      <span class="visually-hidden">Сайт разработчика</span>
+      <img src="images/logo-html-academy.svg" width="115" height="34" alt="Логотип HTMLAcademy">
+    </a>
+
+  </footer>
+</body>
 
 </html>
