--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ru">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>HTML academy:Седона</title>
+  <link rel="stylesheet" href="styles/style.css" />
 </head>
 
 <body>
-
-  <header class="page-header" data-test="header">
+  <header class="page-header">
     <nav class="navigation">
       <a class="logo" href="index.html" aria-current="page">
         <img src="images/logo-sedona.svg" width="140" height="70" alt="Логотип Седона" aria-current="page">
@@ -28,11 +28,13 @@
         <li class="user-item">
           <a class="user-link user-link-search" href="#">
             <span class="visually-hidden">Поиск</span>
+          
           </a>
         </li>
         <li class="user-item">
           <a class="user-link user-link-favorites" href="#">
-            <span class="user-favorites-number">12 Избранное</span>
+            <span class="user-favorites-number">12 </span>
+            
             <span class="visually-hidden">Избранное</span>
           </a>
         </li>
@@ -59,7 +61,7 @@
           Гранд&#8211;Каньон</p>
       </div>
       <ul class="advantages-list list-reset">
-        <li class="advantages-item idvantages-item-full">
+        <li class="advantages-item advantages-item-full">
           <div class="advantages-container">
             <div class="advantages-content">
               <h3 class="advantages-title">Настоящий городок</h3>
@@ -90,7 +92,7 @@
             <p class="advantages-text">Большинство едут в Гранд Каньон и толпятся там</p>
           </div>
         </li>
-        <li class="advantages-item idvantages-item-full">
+        <li class="advantages-item advantages-item-full">
           <div class="advantages-container">
             <div class="advantages-content">
               <h3 class="advantages-title">Мост Дьявола</h3>
